# propchain

./: .env.example  .gitignore  README.md  algokit.toml  deploy.py  pyproject.toml  render.yaml  requirements.txt
ai_oracle/: __init__.py  ocr_engine.py  scorer.py  verifier.py
backend/: __init__.py  database.py  main.py  models.py  requirements.txt  seed_db.py  test_algo.py  test_buy.py  test_buy3.py  test_buy3_b64.py  test_buy_b64.py  test_length.py  test_submit.py
backend/data/: db.json  propchain.db
backend/routes/: __init__.py  governance.py  investments.py  properties.py  rent.py  settlement.py
backend/services/: __init__.py
backend/utils/: __init__.py  algorand.py  ipfs.py
contracts/: __init__.py  fractional_token.py  governance_voting.py  property_registry.py  rent_distributor.py  settlement_engine.py  spv_registry.py
demo/: DEMO_SCRIPT.md  run_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  test_b64.js  test_frontend.js  test_wallet.js  test_wallet2.js  test_wallet4.js  test_wallet5.js  test_wallet6.js  test_wallet7.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnimatedBackground.jsx  Layout.jsx  PropertyMap.jsx  Toast.jsx
frontend/src/pages/: GovernancePage.jsx  LandingPage.jsx  ListPropertyPage.jsx  MarketplacePage.jsx  PortfolioPage.jsx  PropertyDetailPage.jsx
frontend/src/utils/: api.js  demoStore.jsx  mockData.js  wallet.js
tests/: __init__.py  test_contracts.py  test_e2e.py  test_edge_cases.py
